Fixing Dark Mode Style Issues

--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -381,7 +381,7 @@ a:focus {
 .navbar-toggler {
   outline: none !important;
   border: none;
-  color: #1b262c;
+  color: var(--text-color);
 }
 
 #navbar li {
@@ -700,6 +700,7 @@ ul.dropdown-menu li {
 .our-team {
   text-align: center;
   outline: none;
+  box-shadow: 0px -1px 24px -9px rgba(0,0,0,0.46);
 }
 
 .our-team .team_img {
@@ -2240,7 +2241,7 @@ main {
 .cta-block-2{
   border-radius: 20px;
   border: 1px solid;
-  padding: 30px 0;
+  padding: 30px;
   background-color: var(--body-color);
   color: var(--text-color);
 }
